# Live-Reddit-Sentiment-Agent

./: EQUITY_L.csv  README.md  config.py  main.py  notes.md  output.csv  prompts.py  pyproject.toml  todo.md
agent/: main.py  notes.md
agent/functions/: alert_dashboard.py  fetch_price_context.py  fetch_recent_news.py  no_alert.py  re_evaluate_sentiment_confidence.py
crawler/: __init__.py  config.py  crawler.py  database.py  http_client.py  main.py  models.py  parser.py  requirements.txt  testrun.ipynb
dashboard-ui/: package-lock.json
data_stream/: events_000.jsonl
master_csvs/indian_stocks/: BSE_MARKET.csv  NSE_EQUITY.csv
pathway/: main.py  schema.py  test_pipeline.py
pathway/data_stream/: events_001.jsonl  events_002.jsonl  events_003.jsonl
pathway_streams/: main.py  schema.py
pathway_streams/data_stream/: events.004.jsonl  events_000.jsonl  events_001.jsonl  events_002.jsonl  events_005.jsonl  events_latest.jsonl
sentiment/: README.md  pyproject.toml
sentiment/app/: main.py
sentiment/app/models/: sentiment.py
sentiment/app/routes/: sentiment.py
sentiment/app/schemas/: sentiment.py
sentiment/app/services/: sentiment.py
