[project]
name = "live-reddit-sentiment-agent"
version = "0.1.0"
description = "Real-time Reddit sentiment analysis agent"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    # API & Web Framework
    "fastapi>=0.125.0,<0.126.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pydantic>=2.12.5,<3.0.0",
    
    # Database
    "sqlalchemy>=2.0.45,<3.0.0",
    "psycopg2-binary>=2.9.9",
    
    # ML & Sentiment Analysis
    "torch>=2.9.1,<3.0.0",
    "transformers>=4.57.3,<5.0.0",
    
    # Google GenAI
    "google-genai>=1.0.0",
    
    # Utilities
    "python-dotenv>=1.2.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

